src/tests/errors/parsing/test07.cmp

program xxx   (* Unclosed comment.
begin 
end